Complete the basic structure of Section-1
Complete adding the photo, button, hero heading

--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@
             <li>header link two</li>
             <li>header link three</li>
         </ul>
-        <div class="container-1">
-
         </div>
+    </div>
+    <div class="container-1">
+        <div class="left">
+            <p class="heroText">
+                This website is awesome
+            </p>
+            <p class="heroSecondaryText">
+                This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast. 
+            </p>
+            <button>
+                Sign Up
+            </button>
+        </div>
+        <div class="right">
+            <img src="photo.png" alt="placeholder">
         </div>
     </div>
     </div>
