Change image and add fixed height to container-1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
         </div>
         <div class="right">
-            <img src="photo.png" alt="placeholder">
+            <img src="https://plus.unsplash.com/premium_photo-1675882506818-c4d387cc43a1?q=80&w=2006&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder">
         </div>
     </div>
     </div>
