Insert the image border and subtext

--- a/index.html
+++ b/index.html
@@ -35,5 +35,31 @@
         </div>
     </div>
     </div>
+    <div class="section-2">
+    <p class="informationHeader">
+        some random information.
+    </p>
+    <div class="image-container">
+        <div class="image">
+            <p class="caption">
+                this is some subtext under an illustration of image
+            </p>
+        </div>
+        <div class="image">
+            <p class="caption">
+                this is some subtext under an illustration of image
+            </p>
+        </div>
+        <div class="image">
+            <p class="caption">
+                this is some subtext under an illustration of image
+            </p>
+        </div>
+            <div class="image">
+                <p class="caption">
+                    this is some subtext under an illustration of image
+                </p>
+            </div>
+    </div>
 </body>
 </html>
