Finish basic structure of section-4

--- a/index.html
+++ b/index.html
@@ -36,30 +36,56 @@
     </div>
     </div>
     <div class="section-2">
-    <p class="informationHeader">
-        some random information.
-    </p>
-    <div class="image-container">
-        <div class="image">
-            <p class="caption">
-                this is some subtext under an illustration of image
-            </p>
+        <p class="informationHeader">
+            some random information.
+        </p>
+        <div class="image-container">
+                <div class="image">
+                    <p class="caption">
+                        this is some subtext under an illustration of image
+                    </p>
+                </div>
+                <div class="image">
+                    <p class="caption">
+                        this is some subtext under an illustration of image
+                    </p>
+                </div>
+                <div class="image">
+                    <p class="caption">
+                        this is some subtext under an illustration of image
+                    </p>
+                </div>
+                    <div class="image">
+                        <p class="caption">
+                            this is some subtext under an illustration of image
+                        </p>
+                    </div>
         </div>
-        <div class="image">
-            <p class="caption">
-                this is some subtext under an illustration of image
-            </p>
         </div>
-        <div class="image">
-            <p class="caption">
-                this is some subtext under an illustration of image
-            </p>
-        </div>
-            <div class="image">
-                <p class="caption">
-                    this is some subtext under an illustration of image
-                </p>
+        <div class="section-3">
+            <div class="container-2">
+                <div class="quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or people will actually read it. Who knows? All I know is that it looks nice.
+                </div>
+                <div class="author">
+                    -Thor, God of Thunder
+                </div>
             </div>
-    </div>
+        </div>
+        <div class="section-4">
+            <div class="modal">
+                <div class="call-to-action">
+                    <div class="call-to-action-heading">
+                        Call to action! It's time!
+                    </div>
+                    <div class="call-to-action-info">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+                <button class="btn">
+                    Sign Up
+                </button>
+            </div>
+        </div>
 </body>
 </html>
