--- a/index.html
+++ b/index.html
@@ -87,5 +87,8 @@
                 </button>
             </div>
         </div>
+        <div class="footer">
+            Copyright © The Odin Project 2021
+        </div>
 </body>
 </html>
