--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="heroSecondaryText">
                 This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast. 
             </p>
-            <button>
+            <button class="btn-1">
                 Sign Up
             </button>
         </div>
@@ -82,7 +82,7 @@
                         Sign up for our product by clicking that button right over there!
                     </div>
                 </div>
-                <button class="btn">
+                <button class="btn-2">
                     Sign Up
                 </button>
             </div>
